--- a/frontend/main/index.css
+++ b/frontend/main/index.css
@@ -20,44 +20,51 @@
     src: url(coolvetica.ttf);
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.navbar{
+
+.navbar {
     width: 100%;
     height: 80px;
     background-color: #CDBEBA;
+    display: flex;
 }
 
-.logo{
+.lightMode {
+    justify-self: flex-start;
+}
+
+.logo {
     color: gray;
     font-size: 1.1cm;
     font-family: southair;
     margin: 0 100px;
     margin-bottom: 1.9cm;
+    justify-content: center;
 }
 
-.logo span{
+.logo span {
     color: black;
     font-family: beba;
     font-size: 1cm;
 }
 
-.navbar ul{
+.navbar ul {
     float: right;
     display: flex;
     list-style: none;
 }
 
-.navbar ul li{
+.navbar ul li {
     display: inline-block;
     margin-bottom: 1.4cm;
     margin-right: 1cm;
 }
 
-.navbar ul li a{
+.navbar ul li a {
     text-decoration: none;
     color: black;
     font-size: 20px;
@@ -66,7 +73,7 @@
     border-radius: 5px;
 }
 
-.navbar ul li a:hover{
+.navbar ul li a:hover {
     background-color: #B79287;
     color: white;
 }
@@ -84,103 +91,106 @@
     }
 } */
 
-   
-   
-   
+
+
+
 
 
 /* general */
 
-  body{
+body {
     background-color: whitesmoke;
 }
 
-#cherry{
-    position:absolute;
+#cherry {
+    position: absolute;
     float: left;
     left: 0;
-    top:6cm;
+    top: 6cm;
     z-index: -1;
 }
 
-#cherry3{
+#cherry3 {
     position: absolute;
     float: right;
     right: 0;
     top: 15cm;
     z-index: -1;
 }
-  h2{
+
+h2 {
     margin-left: 1cm;
     font-family: cool;
     font-size: 1cm;
- }
+}
 
- p{
-    color: #3D2923 ;
+p {
+    color: #3D2923;
     font-size: 0.6cm;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin-left: 1cm;
     margin-right: 15px;
- }
+}
 
- h3{
+h3 {
     margin-left: 11cm;
     font-family: serif;
     font-style: italic;
     font-size: 1cm;
- }
+}
 
- /* textarea */
- #texta1,#texta2{
-    
-  padding: 12px 20px;
-  border: 2px solid #94908E  ;
-  border-radius: 10px;
-  font-size: 16px;
-  resize: both;
-  box-sizing: border-box;
-  margin-left: 10cm;
- }
+/* textarea */
+#texta1, #texta2 {
 
- #h1{
+    padding: 12px 20px;
+    border: 2px solid #94908E;
+    border-radius: 10px;
+    font-size: 16px;
+    resize: both;
+    box-sizing: border-box;
+    margin-left: 10cm;
+}
+
+#h1 {
     color: whitesmoke;
- }
+}
 
 /* lines next to a heading */
- .hr-stuff{
+.hr-stuff {
     position: relative;
     max-width: 500px;
     margin: 100px auto;
     text-align: center;
- }
+}
 
- .hr-stuff:before,
+.hr-stuff:before,
 .hr-stuff:after {
-  content: "";
-  position: absolute;
-  height: 5px;
-  border-bottom: 1px solid black;
-  border-top: 1px solid black;
-  top: 50%;
-  width: 300px;
+    content: "";
+    position: absolute;
+    height: 5px;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    top: 50%;
+    width: 300px;
 }
+
 .hr-stuff:before {
-  right: 95%;
-  margin-right: 15px;
+    right: 95%;
+    margin-right: 15px;
 }
+
 .hr-stuff:after {
-  left: 95%;
-  margin-left: 15px;
+    left: 95%;
+    margin-left: 15px;
 }
 
 /* for table */
-.table td{
-   width: 20px;
+.table td {
+    width: 20px;
     text-align: center;
 }
 
-h4{
+h4 {
     margin-left: 6cm;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 25px;
@@ -188,17 +198,18 @@ h4{
 }
 
 /* for clipboard icon */
-.fa-clipboard{
-margin-left: 10cm;
-size: 5px;
-color: gray;
+.fa-clipboard {
+    margin-left: 10cm;
+    size: 5px;
+    color: gray;
 }
-.fa-clipboard:hover{
+
+.fa-clipboard:hover {
     color: black;
 }
 
 /* footer */
-.grid-container{
+.grid-container {
     display: grid;
     grid-template-columns: 43% 40%;
     grid-template-rows: 10% 30%;
@@ -206,29 +217,29 @@ color: gray;
     row-gap: 4cm;
     background-color: #CDBEBA;
     height: 100px;
-    margin-top:2cm;
-    width:100%;
+    margin-top: 2cm;
+    width: 100%;
     contain: size;
-    
-    
+
+
 }
 
-.copy{
+.copy {
     font-family: beba;
     font-size: 40px;
     text-align: center;
     width: 100%;
     background-color: #CDBEBA;
-    
-} 
 
-.au,.pp{
+}
+
+.au, .pp {
     font-family: beba;
     font-size: 30px;
     text-align: end;
     padding: 30px;
 }
 
-.pp{
+.pp {
     text-align: start;
 }
